scss/style.scss
/* ... */
@include color-mode(dark) {
    .navbar {
        .show > .nav-link,
        .nav-link.active {
            color: var(--bs-dropdown-color);
            background-color: var(--bs-body-bg);
            border-color: var(--bs-dropdown-border-color);
        }
    }
}

.offcanvas {
    .navbar-nav {
        align-items: flex-start;
        display: grid;
    }
    .btn-close {
        filter: var(--bs-btn-close-white-filter);
    }

    .dropdown-menu {
        --bs-dropdown-color: #ffffff;
        list-style-type: circle;
        margin: 0 0 0 2rem;
        background-color: transparent !important;
        color: var(--bs-dropdown-color);
        border: none;
    }
    .navbar-nav {
        .dropdown-item {
            --bs-dropdown-color: #ffffff;
            color: var(--bs-dropdown-color);
        }
        .dropdown-item:hover, 
        .dropdown-item:focus {
            color: var(--bs-dropdown-link-hover-color);
        }
        .dropdown-item:active,
        .dropdown-item.active {
            color: var(--bs-body-color);
        }
    }
}

@include color-mode(dark) {
    .offcanvas .navbar-nav {
        .dropdown-item:active, 
        .dropdown-item.active {
            color: var(--bs-dropdown-color);
            background-color: var(--bs-body-bg);
            border-color: var(--bs-dropdown-border-color);
        }
    }
}

.display {
    &-5 {
        line-height: 1.5;
    }
    &-6 {
        font-size: calc(1.975rem + 1.5vw);
        @media (min-width: 800px) {
            font-size: calc(1.575rem + 1.5vw);
        }
        @media (min-width: 1200px) {
            font-size: 2.5rem;
        }
    }
}

.section:nth-of-type(odd) {
    --bs-bg-opacity: 1;
    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
}
@include color-mode(dark) {
    .section:nth-of-type(odd) {
        --bs-bg-opacity: 1;
        background-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
    }
}
.section:not(.footer):nth-of-type(odd) {
    @include media-breakpoint-up(fhd) {
        border-radius: var(--bs-border-radius-lg);
        &:last-of-type {
            border-radius: var(--bs-border-radius-lg) var(--bs-border-radius-lg) 0 0;
        }
    }
}

.section-toggle {
    color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
    @include color-mode(dark) {
        color: rgba(var(--bs-light-rgb), var(--bs-text-opacity)) !important;
    }

    .bi::before {
        transition: transform 0.4s ease-in-out;
        transform: rotate(0deg);
    }
    &[aria-expanded="true"] .bi::before {
        transform: rotate(-90deg);
    }
}
.toggle-button {
    --bs-bg-opacity: 1;
    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
    --bs-border-opacity: 1;
    border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
}
@include color-mode(dark) {
    .toggle-button {
        color: var(--bs-white) !important;
        background-color: var(--convrtr-bg-color-75-rgb) !important;
    }
}

textarea {
    background-color: var(--convrtr-textarea);
}

.card-title {
    min-height: 2rem;
}

.grid-auto {
    grid-template-columns: repeat(auto-fill, 1rem)
}

.page {
    &-item {
        margin-bottom: 0.5rem;
    }
    &-link {
        min-width: 2.85rem;
        --bs-pagination-padding-x: 1.1rem;
        --bs-pagination-padding-y: 0.575rem;
        color: var(--convrtr-bg-color);
        &:hover,
        &:focus {
            color: var(--convrtr-bg-color-10);
        }
        &:focus {
            --bs-pagination-focus-box-shadow: 0 0 0 0.25rem var(--convrtr-bg-color-25-rgb);
        }
        &.active {
            background-color: var(--convrtr-bg-color);
            border-color: var(--convrtr-bg-color-20);
            &:hover,
            &:focus {
                color: var(--bs-white);
                border-color: var(--convrtr-bg-color-20);
            }
        }
        .active > & {
            background-color: var(--convrtr-bg-color);
            border-color: var(--convrtr-bg-color-20);
            &:hover,
            &:focus {
                color: var(--bs-white);
                border-color: var(--convrtr-bg-color-20);
            }
        }
    }
}

@include color-mode(dark) {
    .page {
        &-link {
            color: var(--bs-white);
        }
    }
    .card {
        background-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
    }
}

.grid {
    &--fill {
        --bs-column-fill: 6rem;
        grid-template-columns: repeat(auto-fill, minmax(var(--bs-column-fill), 1fr));
    }
    &--fit {
        --bs-column-fit: 6rem;
        grid-template-columns: repeat(auto-fill, minmax(var(--bs-column-fit), 1fr));
    }
}

code {
    color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
}
@include color-mode(dark) {
    code {
        color: var(--bs-white) !important;
        background-color: rgba(var(--bs-bg-success), 0.7) !important;
    }
    .btn-light {
        --bs-btn-padding-x: 0.85rem;
        --bs-btn-padding-y: 0.575rem;
        background-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
        color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
        border-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
        &:hover, &:focus, &:active {
            background-color: rgba(var(--bs-body-color-rgb), var(--convrtr-code-opacity)) !important;
        }
        &:active {
            color: var(--bs-white);
        }
    }
}

.convrtr-results {
    overflow: hidden auto;
    max-height: 24rem;
    text-align: justify;
}

.elements-grid {
    overflow: hidden auto;
    max-height: 20rem;
}
.p-element {
    flex: 1 1 calc(10% - 0.5rem);
    min-width: 8rem;
    max-width: 12rem;
}

.nav-pills {
    .nav-link {
    --bs-nav-link-padding-y: 0.625rem;
    }
}
/* ... */

